new_design/css/style.css
/* ... */
.m-p_registration:hover {
	background: #5A7A30;
	transition: 0.3s ease-out all;
}
.m-p_buy {
	display: inline-block;
	vertical-align: top;
	box-sizing: border-box;
	width: 343px;
	height: 76px;
	border: 2px solid #9CA0AB;
	transition: 0.3s ease-out all;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	text-decoration: none;
	color: #9CA0AB;
	font-size: 20px;
	text-align: center;
	line-height: 76px;
	font-weight: 900;
	letter-spacing: 0.06em;
	transition: 0.3s ease-out all;
}
.m-p_buy:hover {
	transition: 0.3s ease-out all;
	background: #9CA0AB;
	color: #ffffff;
}
.m-p_shadow {
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	-moz-box-shadow: 0 5px 49px rgba(0,0,0,.15);
	-webkit-box-shadow: 0 5px 49px rgba(0,0,0,.15);
	box-shadow: 0 5px 49px rgba(0,0,0,.15);
	padding: 100px 0 114px 0;
}
.m-p_shadow2 {
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	-moz-box-shadow: 0 5px 49px rgba(0,0,0,.15);
	-webkit-box-shadow: 0 5px 49px rgba(0,0,0,.15);
	box-shadow: 0 5px 49px rgba(0,0,0,.15);
	padding: 9px 0 88px 0;
}
.m-p_entrance {
	display: inline-block;
	vertical-align: top;
	width: 343px;
	height: 76px;
	text-decoration: none;
	color: #ffffff;
	font-size: 20px;
	text-align: center;
	line-height: 76px;
	background: #749D3E;
	transition: 0.3s ease-out all;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	-moz-box-shadow: 0 2px 13px rgba(0,0,0,.19);
	-webkit-box-shadow: 0 2px 13px rgba(0,0,0,.19);
	box-shadow: 0 2px 13px rgba(0,0,0,.19);
	font-weight: 900;
	letter-spacing: 0.06em;
	margin: 0 0 31px 0; 
	border: none;
	cursor: pointer;
}
.m-p_entrance:hover {
	background: #5A7A30;
	transition: 0.3s ease-out all;
}
.m-p_forgot {
	display: inline-block;
	vertical-align: top;
	font-size: 17px;
	color: #9CA0AB;
	font-weight: 900;
	letter-spacing: 0.06em;
	cursor: pointer;
	text-decoration: underline;
}
.m-p_forgot:hover {
	text-decoration: none;
}
.modal-profile {
	-moz-border-radius: 4px / 6px;
	-webkit-border-radius: 4px / 6px;
	border-radius: 4px / 6px;
	-moz-box-shadow: 0 5px 49px rgba(0,0,0,.15);
	-webkit-box-shadow: 0 5px 49px rgba(0,0,0,.15);
	box-shadow: 0 5px 49px rgba(0,0,0,.15);
}
.t-c_title {
	font-size: 28px;
	font-weight: 500;
	color: #374047;
	text-align: left;
	margin: 0 0 56px 0;
}
.t-c_box {
	box-sizing: border-box;
	padding: 99px 131px 90px 131px;
}
.t-c_input {
	position: relative;
}
.t-c_input .input {
	display: inline-block;
	vertical-align: top;
	font-family: 'Roboto', sans-serif;
	width: 100%;
	background-color: transparent;
	border: none;
	border-bottom: 3px solid #D4D7DF;
	color: #ACB4BA;
	box-sizing: border-box;
	font-size: 19px;
	position: relative;
	font-weight: 500;
	margin: 0 0 32px 0;
	padding: 23px 0 24px 0;
}
.t-c_input.input-error_1 .underline {
	background-color: #D00;
} 
.t-c_input .input.i-2 {
	font-size: 26px;
	color:#D4D7DF;
	letter-spacing: 0.17em;
	margin: 0 0 52px 0;
	padding: 19px 0 19px 0;
}
.t-c_input .input:focus {
	outline: none;    
}
.t-c_input .input:focus+.underline {
  transform: scale(1);
}
.t-c_input .underline {
	width: 100%;
	background-color: #749D3E;
	display: inline-block;
	height: 3px;
	margin-top: 0px;
	position: absolute;
	left: 0;
	top: 70px;
	-webkit-transform: scale(0, 1);
	transform: scale(0, 1);
	-webkit-transition: all 0.2s linear;
	transition: all 0.2s linear;
}
.t-c_input .input::-webkit-input-placeholder {color:#ACB4BA;}
.t-c_input .input::-moz-placeholder          {color:#ACB4BA;}
.t-c_input .input:-moz-placeholder           {color:#ACB4BA;}
.t-c_input .input:-ms-input-placeholder      {color:#ACB4BA;}
.t-c_input .input.i-2::-webkit-input-placeholder {color:#D4D7DF;}
.t-c_input .input.i-2::-moz-placeholder          {color:#D4D7DF;}
.t-c_input .input.i-2:-moz-placeholder           {color:#D4D7DF;}
.t-c_input .input.i-2:-ms-input-placeholder      {color:#D4D7DF;}
::-webkit-input-placeholder       {opacity: 1; transition: opacity 0.3s ease;}
::-moz-placeholder                {opacity: 1; transition: opacity 0.3s ease;}
:-moz-placeholder                 {opacity: 1; transition: opacity 0.3s ease;}
:-ms-input-placeholder            {opacity: 1; transition: opacity 0.3s ease;}
:focus::-webkit-input-placeholder {opacity: 0; transition: opacity 0.3s ease;}
:focus::-moz-placeholder          {opacity: 0; transition: opacity 0.3s ease;}
:focus:-moz-placeholder           {opacity: 0; transition: opacity 0.3s ease;}
:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s ease;}
/** end **/
/***/
.big-picture {
	width: 100%;
	height: 407px;
	background: url(../img/big_pic_3.jpg) no-repeat center top;
	background-size: cover;
	position: relative;
	z-index: 1;
}
.b-p_title {
	font-weight: 500;
	color: #FFFFFF;
	font-size: 52px;
	text-align: center;
	line-height: 70px;
	position: relative;
	top: 43.5%;
}
/*** **/
/** advantage **/
.fond-advantage {
	min-height: 298px;
	border-bottom: 1px solid #CACED2;
        position: relative;
}
.fond-advantage a.btn-close-tab {
    position: absolute;
    top: 15px;
    right: 10px;
}
.list-advantage {
	width: 100%;
	display: table;
	font-size: 0;
	text-align: center;
	padding: 50px 0 0 0;
}
.list-advantage li {
	width: 25%;
	min-height: 248px;
	display: inline-block;
	vertical-align: top;
	box-sizing: border-box;
	padding: 0 25px;
	position: relative;
}
.l-a_title {
	font-size: 18px;
	color: #374047;
	line-height: 31px;
	margin: 23px 0 0 0;
}
.l-a_thumb {
	height: 64px;
}
.l-a_icon {
	background-image: url(../img/sprite_advantage.png);
    background-repeat: no-repeat;
    display: inline-block;
    vertical-align: top;
}
.l-a_1 {
	width: 64px;
	height: 56px;
	background-position: -64px -64px;
	margin: 1px 0 0 0;
}
.list-advantage li:hover .l-a_1 {
	background-position: -0px -64px;
}
.l-a_2 {
	width: 62px;
	height: 64px;
	background-position: -62px 0px;
}
.list-advantage li:hover .l-a_2 {
	background-position: 0px 0px;
}
/* ... */

